agregando entidad LineaNegocio

--- a/linea-negocio/src/main/resources/application.properties
+++ b/linea-negocio/src/main/resources/application.properties
@@ -13,7 +13,11 @@ spring.datasource.username=notifico
 spring.datasource.password=14142135
 
 #drop n create table again, good for testing, comment this in production
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
+#create-drop
 #update
 #create-drop
 logging.level.org.hibernate.SQL=debug
+
+#spring.application.admin.enabled=true
+#spring.application.admin.jmx-name=org.springframework.boot:type=Admin,name=SpringApplication # JMX name of the application admin MBean.
