search con sortby y sortOrder

--- a/linea-negocio/src/main/resources/application.properties
+++ b/linea-negocio/src/main/resources/application.properties
@@ -8,12 +8,12 @@ spring.datasource.hikari.maximumPoolSize=5
 # grant all privileges on database notifico to notifico;
 
 ## PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/notifico
-spring.datasource.username=notifico
+spring.datasource.url=jdbc:postgresql://localhost:5432/cromero_notifico
+spring.datasource.username=cromero_notifico
 spring.datasource.password=14142135
 
 #drop n create table again, good for testing, comment this in production
-spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=create
 #create-drop
 #update
 #create-drop
