--- a/linea-negocio/src/main/resources/application.properties
+++ b/linea-negocio/src/main/resources/application.properties
@@ -13,8 +13,8 @@ spring.datasource.username=cromero_notifico
 spring.datasource.password=14142135
 
 #drop n create table again, good for testing, comment this in production
-spring.jpa.hibernate.ddl-auto=create
-create-drop
+#spring.jpa.hibernate.ddl-auto=create
+#create-drop
 #update
 #create-drop
 logging.level.org.hibernate.SQL=debug
