backend de ubicaciones

--- a/linea-negocio/src/main/resources/application.properties
+++ b/linea-negocio/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 
-## default connection pool
-spring.datasource.hikari.connectionTimeout=20000
+## default connection poolnnectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
 #create database notifico;
 # create user notifico with encrypted password '14142135';
 # grant all privileges on database notifico to notifico;
 
+spring.datasource.hikari.co
 ## PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/cromero_notifico
 spring.datasource.username=cromero_notifico
