--- a/linea-negocio/src/main/resources/application.properties
+++ b/linea-negocio/src/main/resources/application.properties
@@ -1,23 +1,11 @@
 
-## default connection poolnnectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
-
-#create database notifico;
-# create user notifico with encrypted password '14142135';
-# grant all privileges on database notifico to notifico;
-
 spring.datasource.hikari.co
-## PostgreSQL
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/cromero_notifico
 spring.datasource.username=cromero_notifico
 spring.datasource.password=14142135
 
-#drop n create table again, good for testing, comment this in production
-#spring.jpa.hibernate.ddl-auto=create
-#create-drop
-#update
-#create-drop
-logging.level.org.hibernate.SQL=debug
+spring.jpa.hibernate.ddl-auto=create
 
-#spring.application.admin.enabled=true
-#spring.application.admin.jmx-name=org.springframework.boot:type=Admin,name=SpringApplication # JMX name of the application admin MBean.
+logging.level.org.hibernate.SQL=debug
