--- a/linea-negocio/src/main/resources/application.properties
+++ b/linea-negocio/src/main/resources/application.properties
@@ -6,6 +6,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/cromero_notifico
 spring.datasource.username=cromero_notifico
 spring.datasource.password=14142135
 
-spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=create
 
 logging.level.org.hibernate.SQL=debug
